[gd_scene load_steps=8 format=3 uid="uid://bhvf6gyglptto"]

[ext_resource type="Script" path="res://scripts/TeaBrick.gd" id="1_nhujj"]
[ext_resource type="PackedScene" uid="uid://bfv8t0cytyall" path="res://models/jar/jar.gltf" id="2_ysiou"]
[ext_resource type="PackedScene" uid="uid://b0cj6is5wudmt" path="res://scenes/label.tscn" id="3_ogbe1"]
[ext_resource type="PackedScene" uid="uid://drw752s764j10" path="res://scenes/ui/ui_flavor_profile.tscn" id="4_bilcr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tl8i4"]
size = Vector3(0.28, 0.41, 0.28)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4fcwf"]
albedo_color = Color(0.513726, 0.27451, 0.529412, 1)

[sub_resource type="BoxMesh" id="BoxMesh_m5mk2"]
material = SubResource("StandardMaterial3D_4fcwf")
size = Vector3(0.1, 0.15, 0.1)

[node name="Ingredient" type="Area3D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_nhujj")

[node name="Hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.205, 0)
shape = SubResource("BoxShape3D_tl8i4")

[node name="IngredientAnchor" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.032529, 0)

[node name="IngredientMesh" type="MeshInstance3D" parent="IngredientAnchor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0754125, 0)
mesh = SubResource("BoxMesh_m5mk2")
skeleton = NodePath("../..")

[node name="JarMesh" parent="." instance=ExtResource("2_ysiou")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="Label" parent="." instance=ExtResource("3_ogbe1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.650796, 0)

[node name="IngredientColorLabel" parent="." instance=ExtResource("3_ogbe1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.331078, 0)

[node name="FlavorProfileUI" parent="." instance=ExtResource("4_bilcr")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.507367, 0)
